--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div class="frame">
   <button id="btn1" class="custom-btn btn-1">GRAY</button>
   <button id="btn2" class="custom-btn btn-2">YELLOW</button>
-  <button id="btn3" class="custom-btn btn-3"><span>AQUA</span></button>
+  <button id="btn3" class="custom-btn btn-3"><span>GOLD</span></button>
   <button Id="btn4" class="custom-btn btn-4"><span>BLUE</span></button>
   <button id="btn5" class="custom-btn btn-5"><span>CYAN</span></button>
   <button id="btn6" class="custom-btn btn-6"><span>PURPLE</span></button>
@@ -45,7 +45,7 @@ btn2.addEventListener('click', function onClick(event)
  const btn3 = document.getElementById('btn3');
 btn3.addEventListener('click', function onClick(event)
  {
-  document.body.style.backgroundColor = 'aqua';
+  document.body.style.backgroundColor = 'gold';
 });
 const btn4 = document.getElementById('btn4');
 btn4.addEventListener('click', function onClick(event)
