gold & aqua updated

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <button id="btn12" class="custom-btn btn-12"><span>Click!</span><span>OLIVA</span></button>
   <button id="btn13" class="custom-btn btn-13">CREAM</button>
   <button id="btn14" class="custom-btn btn-14">SILVER</button>
-  <button id="btn15" class="custom-btn btn-15">GOLD</button>
+  <button id="btn15" class="custom-btn btn-15">AQUA</button>
   <button id="btn16" class="custom-btn btn-16">TEAL</button>
   <p style="font-family: Andale Mono, monospace;">
     Git-Sarfraz</p>
@@ -109,9 +109,9 @@ btn14.addEventListener('click', function onClick(event)
   document.body.style.backgroundColor = 'silver';
  });
  const btn15 = document.getElementById('btn15');
-btn3.addEventListener('click', function onClick(event)
+btn15.addEventListener('click', function onClick(event)
  {
-  document.body.style.backgroundColor = 'gold';
+  document.body.style.backgroundColor = 'aqua';
 });
 const btn16 = document.getElementById('btn16');
 btn16.addEventListener('click', function onClick(event)
