--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <button id="btn10" class="custom-btn btn-10">GREEN</button>
   <button id="btn11" class="custom-btn btn-11">PINK<div class="dot"></div></button>
   <button id="btn12" class="custom-btn btn-12"><span>Click!</span><span>OLIVA</span></button>
-  <button id="btn13" class="custom-btn btn-13">CREAM</button>
+  <button id="btn13" class="custom-btn btn-13">LIME</button>
   <button id="btn14" class="custom-btn btn-14">SILVER</button>
   <button id="btn15" class="custom-btn btn-15">AQUA</button>
   <button id="btn16" class="custom-btn btn-16">TEAL</button>
@@ -95,13 +95,13 @@ const btn12 = document.getElementById('btn12');
 btn12.addEventListener('click', function onClick(event)
  {
   
-  document.body.style.backgroundColor = 'oliva';
+  document.body.style.backgroundColor = 'olive';
 
  });
  const btn13 = document.getElementById('btn13');
 btn13.addEventListener('click', function onClick(event)
  {
-  document.body.style.backgroundColor = 'cream';
+  document.body.style.backgroundColor = 'lime';
 });
 const btn14 = document.getElementById('btn14');
 btn14.addEventListener('click', function onClick(event)
